# assembler

./: CMakeLists.txt  Makefile  base_conversion.c  base_conversion.h  const_tables.c  const_tables.h  errors.c  errors.h  file_utils.c  file_utils.h  first_pass.c  first_pass.h  linkedlist.c  linkedlist.h  machine_code.c  machine_code.h  macro.c  macro.h  main.c  memmap.c  memmap.h  memory_code.c  memory_code.h  parser.c  parser.h  pre_assembly.c  pre_assembly.h  rules.c  rules.h  second_pass.c  second_pass.h  str_utils.c  str_utils.h  symtab.c  symtab.h  types_utils.c  types_utils.h  utils.c  utils.h
input/: pre_assembly_example.as
output/: pre_assembly_example_TRUE.am
